k8s/mine/mine.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mine 
  labels:
    app: mine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mine
  template:
    metadata:
      labels:
        app: mine
    spec:
      containers:
      - name: mine
        image: itzg/minecraft-server
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 500m
            memory: 1Gi
        volumeMounts:
        - name: data
          mountPath: /data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: minecraft-pvc
---

# Creating separate load balancer + manual dns records.
# TODO determine if it's possible to route to this service via nginx.

apiVersion: v1
kind: Service
metadata:
  name: mine
  labels:
    app: mine
spec:
  type: LoadBalancer
  selector:
    app: mine
  ports:
    - port: 25565
      protocol: TCP
      targetPort: 19132
