k8s/mine/site.yaml
apiVersion: v1
kind: Service
metadata:
  name: minesite
spec:
  ports:
  - port: 80
    targetPort: 1500
  selector:
    app: minesite
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: minesite
spec:
  selector:
    matchLabels:
      app: minesite
  replicas: 1
  template:
    metadata:
      labels:
        app: minesite
    spec:
      containers:
      - name: minesite
        image: debian
        command: [ "/bin/bash", "-c", "--" ]
        args:
          - |
            [...]
        ports:
        - containerPort: 1500
