k8s/mine/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mine-ingress
spec:
  rules:
  - host: "mine.tehjoker.com"
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: minecraft
              port:
                number: 19132
  ingressClassName: nginx
